server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sample-app-http
    labels:
        tier: backend
spec:
    selector:
        app: sample-app
        tier: backend
    ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
